tests/fixtures/invalid/pow_dict_list_int.py
# Cannot call pow() with Dict[str, int], List[int], Int
x = pow({"a": 1}, [1, 2, 3], 1)
